--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
-    "just-validate": "^4.3.0"
+    "dayjs": "^1.11.10",
+    "just-validate": "^4.3.0",
+    "uuid": "^9.0.1"
   }
 }
